# banking-rag

capstone-project-1-final/: .env.example  README.md  app.py  capstone-project-1.code-workspace  customer_data.py  main.py  pyproject.toml
capstone-project-1-final/pages/: admin.py
capstone-project-1-final/src/api/v1/agents/: agent_service.py
capstone-project-1-final/src/api/v1/routes/: admin.py  query.py
capstone-project-1-final/src/api/v1/schemas/: query_schema.py
capstone-project-1-final/src/api/v1/tools/: fts_tool.py  hybrid_tool.py  vector_tool.py
capstone-project-1-final/src/core/: db.py
capstone-project-1-final/src/ingestion/: ingestion.py
